Resume File Link Fixed

--- a/resume.html
+++ b/resume.html
@@ -15,10 +15,8 @@
 	<br>
 	<br>
 	<div class="content">
-		<!-- <object data="files/resume_sd_latest.pdf" type='application/pdf' width="1024" height="768">
-			alt : <a href="data/test.pdf">test.pdf</a>
-		</object> -->
-		<img src="files/test.pdf">
+		<object data="files/resume_sd_latest.pdf" type='application/pdf' width="1024" height="768">
+		</object>
 	</div>
   </body>
 </html>
