First Draft of Site

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <body>
 	<ul>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="#">Projects</a></li>
+		<div class="current_page"><li><a href="#">Projects</a></li></div>
 		<li><a href="resume.html">Resume</a></li>
 		<li><a href="contact.html">Contact</a></li>
 	</ul>
@@ -15,7 +15,10 @@
 	<br>
 	<br>
 	<div class="content">
-		Page Construction In Progress.
+		Hello wayfarer, this page is still shy of meeting the public eye. Stay tuned though.
+		<br>
+		<br>
+		In the meanwhile, please feel free to look around the other links.
 	</div>
   </body>
 </html>
