--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="projects.html">Projects</a></li>
 		<li><a href="resume.html">Resume</a></li>
-		<li><a href="#">Contact</a></li>
+		<div class="current_page"><li><a href="#">Contact</a></li></div>
 	</ul>
 	<br>
 	<br>
@@ -24,8 +24,12 @@
 		East Lansing, MI - 48824
 		<br>
 		<br>
-		<b>Email: </b><br>
+		<b>Email: </b>
+		<br>
 		dassapta(AT)msu(DOT)edu
+		<br>
+		<br>
+		Check out my <a href="http://www.linkedin.com/in/dassap">LinkedIn</a> profile.
 	</div>
   </body>
 </html>
