--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 	<ul>
-		<li><a href="#">Home</a></li>
+		<div class="current_page"><li><a href="#">Home</a></li></div>
 		<li><a href="projects.html">Projects</a></li>
 		<li><a href="resume.html">Resume</a></li>
 		<li><a href="contact.html">Contact</a></li>
@@ -14,7 +14,29 @@
 	<br>
 	<br>
 	<br>
-	<div class="content">Hello wayfarer, this website is still under construction.<br><br>Check back some time soon.
+	<div class="content">Hi, I am <a href="http://about.me/saptarshi.das">Saptarshi</a>.
+		<br>
+		<br>
+		<br>
+		<br>
+		I am a doctoral student in <a href="http://www.egr.msu.edu/ece/">Electrical and Computer Engineering</a> at <a href="http://www.msu.edu">Michigan State University</a>.
+		<br>
+		<br>
+		I am working on the broad area of <a href="http://neews.egr.msu.edu/">Networked Embedded and Wireless Systems</a> under the guidance of <a href="http://www.egr.msu.edu/~sbiswas/">Prof. Subir Biswas</a>.
+		<br>
+		<br>
+		My specific research focus is on designing novel energy-aware and lightweight protocol approaches for reliable networking in energy harvested systems.
+		<br>
+		<br>
+		Please take a look at my <a href="resume.html">resume</a> for more information on my academic, research and industrial background.
+		<br>
+		<br>
+		<br>
+		<br>
+		I hail from the <i><a href="http://en.wikipedia.org/wiki/Kolkata">"City of Joy"</a></i> and love programming, photography and amateur astronomy.
+		<br>
+		<br>
+		Do feel free to look around the site and find out more about me.
 	</div>
   </body>
 </html>
