--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="projects.html">Projects</a></li>
-		<li><a href="#">Resume</a></li>
+		<div class="current_page"><li><a href="#">Resume</a></li></div>
 		<li><a href="contact.html">Contact</a></li>
 	</ul>
 	<br>
@@ -15,7 +15,10 @@
 	<br>
 	<br>
 	<div class="content">
-		<object data="files/resume_sd_latest.pdf" type='application/pdf' width="1024" height="768">
+		<object data="files/resume_sd_latest.pdf" type="application/pdf" width="100%" height="100%">
+		  <p>It appears you don't have a PDF plugin for this browser.
+		  No biggie... you can <a href="files/resume_sd_latest.pdf">click here to download the PDF file.</a>
+		  </p>
 		</object>
 	</div>
   </body>
