More Content Update
Updated Site with Projects Page

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,14 @@
 		dassapta(AT)msu(DOT)edu
 		<br>
 		<br>
-		Check out my <a href="http://www.linkedin.com/in/dassap">LinkedIn</a> profile.
+		<b>LinkedIn : </b>
+		<br>
+		<a href="http://www.linkedin.com/in/dassap">http://www.linkedin.com/in/dassap</a>
+		<br>
+		<br>
+		<b>About Me : </b>
+		<br>
+		<a href="http://about.me/saptarshi.das">http://about.me/saptarshi.das</a>
 	</div>
   </body>
 </html>
