--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<br>
 	<br>
 	<br>
-	<div class="content">Hi, I am <a href="http://about.me/saptarshi.das">Saptarshi</a>.
+	<div class="content">Hi, I am <a href="contact.html">Saptarshi</a>.
 		<br>
 		<br>
 		<br>
@@ -22,7 +22,7 @@
 		I am a doctoral student in <a href="http://www.egr.msu.edu/ece/">Electrical and Computer Engineering</a> at <a href="http://www.msu.edu">Michigan State University</a>.
 		<br>
 		<br>
-		I am working on the broad area of <a href="http://neews.egr.msu.edu/">Networked Embedded and Wireless Systems</a> under the guidance of <a href="http://www.egr.msu.edu/~sbiswas/">Prof. Subir Biswas</a>.
+		I work on the broad area of <a href="http://neews.egr.msu.edu/">Networked Embedded and Wireless Systems</a> under the guidance of <a href="http://www.egr.msu.edu/~sbiswas/">Prof. Subir Biswas</a>.
 		<br>
 		<br>
 		My specific research focus is on designing novel energy-aware and lightweight protocol approaches for reliable networking in energy harvested systems.
