--- a/projects.html
+++ b/projects.html
@@ -20,37 +20,37 @@
 		<br>
 		<b>NASA Badge System for Behavioural Monitoring</b>
 		<br>
-		(Funded by NASA - Collaboration with team from Psychology department, MSU)
+		<i>(Funded by NASA - Collaboration with team from Psychology department, MSU)</i>
 		<br>
 		Developed software components of a wireless, networked wearable badge system for behavioural monitoring of human subjects.
-		Data generated is used for analysis of team cohesion dynamics by Psychology researchers from MSU
-		Modalities captured by the badges include motion, position, heart rate, and other environmental conditions
-		Used nesC(TinyOS) for programming the embedded Cricket platform that forms the heart of the badges
-		Rudimentary familiarity with 3D printing and design of the badge cases using Blender
+		<br>Data generated is used for analysis of team cohesion dynamics by Psychology researchers from MSU
+		<br>Modalities captured by the badges include motion, position, heart rate, and other environmental conditions
+		<br>Used nesC(TinyOS) for programming the embedded Cricket platform that forms the heart of the badges
+		<br>Rudimentary familiarity with 3D printing and design of the badge cases using Blender
 		<br>
 		<br>
 		<b>Ultrasonic Pulse Modems for Event Monitoring and Through-substrate communication</b>
 		<br>
-		(Funded by SPG (MSU) and NSF - Collaboration with teams from Electrical and Civil Engineering)
+		<i>(Funded by SPG (MSU) and NSF - Collaboration with teams from Electrical and Civil Engineering)</i>
 		<br>
 		Collaborated in the design of platform architecture for structural health monitoring using energy harvested networked sensing devices.
-		Developed an adaptive and energy-efficient networking protocol for energy harvested networked sensing devices and evaluated the same using simulation experiments
+		<br>Developed an adaptive and energy-efficient networking protocol for energy harvested networked sensing devices and evaluated the same using simulation experiments
 		<br>
 		<br>
 		<b>Network Protocol Optimization in Dynamic Traffic conditions using Evolutionary approaches</b>
 		<br>
-		(Course Projects - Mullti-Objective Optimization using Evolutionary Principles / Survey of Evolutionary Algorithms)
+		<i>(Course Projects - Mullti-Objective Optimization using Evolutionary Principles / Survey of Evolutionary Algorithms)</i>
 		<br>
 		Developed an evolutionary algorithm based network protocol optimization using NSGA-II on the ONE simulator.
-		Working on development of artificial life based network protocol optimization in the Avida platform
+		<br>Working on development of artificial life based network protocol optimization in the Avida platform
 		<br>
 		<br>
 		<b>Investigation of Bluetooth based RSSI fingerprinting for Indoor Localization</b>
 		<br>
-		(Course Project - Advanced Communication and Networking)
+		<i>(Course Project - Advanced Communication and Networking)</i>
 		<br>
 		Developed an Android application for Bluetooth RSSI fingerprinting (Android SDK and Eclipse)
-		Performed Indoor Localization using Fingerprint data and statistical inference using Bhattacharya distance measure (programmed in MATLAB)
+		<br>Performed Indoor Localization using Fingerprint data and statistical inference using Bhattacharya distance measure (programmed in MATLAB)
 		<br>
 		<br>
 		<b>Final Year Project (Undergraduate)</b>
