Cosmetic Changes to Projects Page

--- a/index.html
+++ b/index.html
@@ -10,32 +10,19 @@
 		<li><a href="resume.html">Resume</a></li>
 		<li><a href="contact.html">Contact</a></li>
 	</ul>
-	<br>
-	<br>
-	<br>
-	<br>
+	<br><br><br><br>
 	<div class="content">Hi, I am <a href="contact.html">Saptarshi</a>.
-		<br>
-		<br>
-		<br>
-		<br>
+		<br><br><br><br>
 		I am a doctoral student in <a href="http://www.egr.msu.edu/ece/">Electrical and Computer Engineering</a> at <a href="http://www.msu.edu">Michigan State University</a>.
-		<br>
-		<br>
+		<br><br>
 		I work on the broad area of <a href="http://neews.egr.msu.edu/">Networked Embedded and Wireless Systems</a> under the guidance of <a href="http://www.egr.msu.edu/~sbiswas/">Prof. Subir Biswas</a>.
-		<br>
-		<br>
+		<br><br>
 		My specific research focus is on designing novel energy-aware and lightweight protocol approaches for reliable networking in energy harvested systems.
-		<br>
-		<br>
+		<br><br>
 		Please take a look at my <a href="resume.html">resume</a> for more information on my academic, research and industrial background.
-		<br>
-		<br>
-		<br>
-		<br>
-		I hail from the <i><a href="http://en.wikipedia.org/wiki/Kolkata">"City of Joy"</a></i> and love programming, photography and amateur astronomy.
-		<br>
-		<br>
+		<br><br><br><br>
+		I hail from the <a href="http://en.wikipedia.org/wiki/Kolkata">"City of Joy"</a> and love programming, photography and amateur astronomy.
+		<br><br>
 		Do feel free to look around the site and find out more about me.
 	</div>
   </body>
