--- a/projects.html
+++ b/projects.html
@@ -16,45 +16,40 @@
 	<br>
 	<div class="content">
 		Please find below a list of the various research projects I have been involved with in the recent past.
-		<br>
-		<br>
-		<b>NASA Badge System for Behavioural Monitoring</b>
-		<br>
-		<i>(Funded by NASA - Collaboration with team from Psychology department, MSU)</i>
-		<br>
-		Developed software components of a wireless, networked wearable badge system for behavioural monitoring of human subjects.
+		<br><br>
+		<b>NASA Badge System for Team Cohesion and Behavioral Monitoring</b>
+		<br><br>
+		<i>Funded by NASA - Collaboration with team from Department of Psychology (Organizational), MSU</i>
+		<br><br>
+		Developed software components of a wireless, networked wearable badge system for behavioural monitoring of human subjects
 		<br>Data generated is used for analysis of team cohesion dynamics by Psychology researchers from MSU
 		<br>Modalities captured by the badges include motion, position, heart rate, and other environmental conditions
 		<br>Used nesC(TinyOS) for programming the embedded Cricket platform that forms the heart of the badges
 		<br>Rudimentary familiarity with 3D printing and design of the badge cases using Blender
-		<br>
-		<br>
-		<b>Ultrasonic Pulse Modems for Event Monitoring and Through-substrate communication</b>
-		<br>
-		<i>(Funded by SPG (MSU) and NSF - Collaboration with teams from Electrical and Civil Engineering)</i>
-		<br>
-		Collaborated in the design of platform architecture for structural health monitoring using energy harvested networked sensing devices.
+		<br><br>
+		<b>Ultrasonic Pulse Modems for Event Monitoring and Through-substrate Communication</b>
+		<br><br>
+		<i>Funded by SPG(MSU) and NSF - Collaboration with teams from Electrical and Civil Engineering</i>
+		<br><br>
+		Collaborated in the design of platform architecture for structural health monitoring using energy harvested networked sensing devices
 		<br>Developed an adaptive and energy-efficient networking protocol for energy harvested networked sensing devices and evaluated the same using simulation experiments
-		<br>
-		<br>
-		<b>Network Protocol Optimization in Dynamic Traffic conditions using Evolutionary approaches</b>
-		<br>
-		<i>(Course Projects - Mullti-Objective Optimization using Evolutionary Principles / Survey of Evolutionary Algorithms)</i>
-		<br>
-		Developed an evolutionary algorithm based network protocol optimization using NSGA-II on the ONE simulator.
+		<br><br>
+		<b>Network Protocol Optimization in Dynamic Traffic conditions using Evolutionary Approaches</b>
+		<br><br>
+		<i>Course Projects - Mullti-Objective Optimization using Evolutionary Principles / Survey of Evolutionary Algorithms</i>
+		<br><br>
+		Developed an evolutionary algorithm based network protocol optimization using NSGA-II on the ONE simulator
 		<br>Working on development of artificial life based network protocol optimization in the Avida platform
-		<br>
-		<br>
+		<br><br>
 		<b>Investigation of Bluetooth based RSSI fingerprinting for Indoor Localization</b>
-		<br>
-		<i>(Course Project - Advanced Communication and Networking)</i>
-		<br>
+		<br><br>
+		<i>Course Project - Advanced Communication and Networking</i>
+		<br><br>
 		Developed an Android application for Bluetooth RSSI fingerprinting (Android SDK and Eclipse)
 		<br>Performed Indoor Localization using Fingerprint data and statistical inference using Bhattacharya distance measure (programmed in MATLAB)
-		<br>
-		<br>
+		<br><br>
 		<b>Final Year Project (Undergraduate)</b>
-		<br>
+		<br><br>
 		Development of Efficient Adaptive Colour Demosaicing and Face Detection Algorithms for Image Processing
 	</div>
   </body>
