Consistency Changes in Projects Page

--- a/projects.html
+++ b/projects.html
@@ -34,14 +34,14 @@
 		Collaborated in the design of platform architecture for structural health monitoring using energy harvested networked sensing devices
 		<br>Developed an adaptive and energy-efficient networking protocol for energy harvested networked sensing devices and evaluated the same using simulation experiments
 		<br><br>
-		<b>Network Protocol Optimization in Dynamic Traffic conditions using Evolutionary Approaches</b>
+		<b>Network Protocol Optimization in Dynamic Traffic Conditions using Evolutionary Approaches</b>
 		<br><br>
 		<i>Course Projects - Mullti-Objective Optimization using Evolutionary Principles / Survey of Evolutionary Algorithms</i>
 		<br><br>
 		Developed an evolutionary algorithm based network protocol optimization using NSGA-II on the ONE simulator
 		<br>Working on development of artificial life based network protocol optimization in the Avida platform
 		<br><br>
-		<b>Investigation of Bluetooth based RSSI fingerprinting for Indoor Localization</b>
+		<b>Investigation of Bluetooth Based RSSI Fingerprinting for Indoor Localization</b>
 		<br><br>
 		<i>Course Project - Advanced Communication and Networking</i>
 		<br><br>
