Further cosmetic changes

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		<br><br><br><br>
 		I am a doctoral student in <a href="http://www.egr.msu.edu/ece/">Electrical and Computer Engineering</a> at <a href="http://www.msu.edu">Michigan State University</a>.
 		<br><br>
-		I work on the broad area of <a href="http://neews.egr.msu.edu/">Networked Embedded and Wireless Systems</a> under the guidance of <a href="http://www.egr.msu.edu/~sbiswas/">Prof. Subir Biswas</a>.
+		I work on the broad area of <a href="http://neews.egr.msu.edu/">Networked, Embedded and Wireless Systems</a> under the guidance of <a href="http://www.egr.msu.edu/~sbiswas/">Prof. Subir Biswas</a>.
 		<br><br>
-		My specific research focus is on designing novel energy-aware and lightweight protocol approaches for reliable networking in energy harvested systems.
+		My research focus is on designing novel energy-aware and lightweight protocol approaches for reliable networking in energy harvested systems.
 		<br><br>
 		Please take a look at my <a href="resume.html">resume</a> for more information on my academic, research and industrial background.
 		<br><br><br><br>
