--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 		<br><br>
 		<i>Funded by NASA - Collaboration with team from Department of Psychology(Organizational), MSU</i>
 		<br><br>
-		Developed software components of a wireless, networked wearable badge system for behavioural monitoring of human subjects
+		Developed software components of a wireless, networked wearable badge system for behavioral monitoring of human subjects
 		<br>Data generated is used for analysis of team cohesion dynamics by Psychology researchers from MSU
 		<br>Modalities captured by the badges include motion, position, heart rate, and other environmental conditions
 		<br>Used nesC(TinyOS) for programming the embedded Cricket platform that forms the heart of the badges
