Updated design for better mobile experience

--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,50 @@
+<!DOCTYPE html>
 <html>
   <head>
-  <link rel="stylesheet" type="text/css" href="mystyle.css">
-  <link rel="stylesheet" href="fonts/aaargh_normal_macroman/stylesheet.css" type="text/css" charset="utf-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1">
+    <meta name="author" content="Saptarshi Das">
+    <meta name="description" content="Saptarshi Das - Contact">
+    <meta name="keywords" content="Saptarshi Das, saptarshi msu, saptarshi das msu, contact">
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+    <title>Saptarshi Das - Contact</title>
   </head>
-  <body>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="projects.html">Projects</a></li>
-		<li><a href="resume.html">Resume</a></li>
-		<div class="current_page"><li><a href="#">Contact</a></li></div>
-	</ul>
-	<br>
-	<br>
-	<br>
-	<br>
-	<div class="content">
-		<b>Address:</b>
-		<br>
-		1526 Engineering Building,
-		<br>
-		Michigan State University,
-		<br>
-		East Lansing, MI - 48824
-		<br>
-		<br>
-		<b>Email: </b>
-		<br>
-		dassapta(AT)msu(DOT)edu
-		<br>
-		<br>
-		<b>LinkedIn : </b>
-		<br>
-		<a href="http://www.linkedin.com/in/dassap">http://www.linkedin.com/in/dassap</a>
-		<br>
-		<br>
-		<b>About Me : </b>
-		<br>
-		<a href="http://about.me/saptarshi.das">http://about.me/saptarshi.das</a>
-	</div>
+  <body id="contact-body">
+    <header>
+  	    <h1 id="resume-body-header-logo" class="logo"><a href="http://www.egr.msu.edu/~dassapta">Saptarshi Das</a></h1>
+  	    <a id="resume-body-header-to_nav" class="to_nav" href="#primary_nav">Menu</a>
+  	</header>
+	  <div id="contact-body-content" class="body-content">
+		  <h2>Address:</h2>
+		  <p>
+		    1526 Engineering Building,<br>
+		    Michigan State University,<br>
+		    East Lansing, MI - 48824
+      </p>
+		  <h2>Email: </h2>
+		  <p>
+		    dassapta(AT)msu(DOT)edu
+		  </p>
+		  <h2>LinkedIn : </h2>
+		  <p>
+		  <a href="http://www.linkedin.com/in/dassap">http://www.linkedin.com/in/dassap</a>
+		  </p>
+		  <h2>About Me : </h2>
+		  <p>
+		    <a href="http://about.me/saptarshi.das">http://about.me/saptarshi.das</a>
+		  </p>
+	  </div>
+	  <nav id="primary_nav">
+	    <ul>
+	    	<li><a href="index.html">Home</a></li>
+	      <li><a href="projects.html">Projects</a></li>
+	      <li><a href="resume.html">Resume</a></li>
+	      <li><a href="contact.html" class="current_page_link">Contact</a></li>
+	    </ul>
+	  </nav>
+	  <footer>
+	    Created by Saptarshi Das. 2015. Uncopyrighted.
+	  </footer>
   </body>
 </html>
