More user experience optimization

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
 		    <li>Developed an adaptive and energy-efficient networking protocol for energy harvested networked sensing devices and evaluated the same using simulation experiments</li>
 		  </ul>
 		  <h2>3. Network Protocol Optimization in Dynamic Traffic Conditions using Evolutionary Approaches</h2>
-		  Course Projects - Mullti-Objective Optimization using Evolutionary Principles / Survey of Evolutionary Algorithms
+		  Course Projects - Evolutionary Multi-Criterion Optimization and Decision-Making / Evolutionary Algorithms
 		  <ul class="projects">
 		    <li>Developed an evolutionary algorithm based network protocol optimization using NSGA-II on the ONE simulator</li>
 		    <li>Working on development of artificial life based network protocol optimization in the Avida platform</li>
