--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,9 @@
     <meta name="keywords" content="Saptarshi Das, saptarshi msu, saptarshi das msu, projects">
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+    <!--[if lt IE 9]>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
     <title>Saptarshi Das - Projects</title>
   </head>
   <body id="projects-body">
