Revert "Fixing header logo link"
This reverts commit 63d52f024be8ae879c7b4532a3614f97879012ac.

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   </head>
   <body id="contact-body">
     <header>
-  	    <h1 id="resume-body-header-logo" class="logo"><a href="index.html">Saptarshi Das</a></h1>
+  	    <h1 id="resume-body-header-logo" class="logo"><a href="http://www.egr.msu.edu/~dassapta">Saptarshi Das</a></h1>
   	    <a id="resume-body-header-to_nav" class="to_nav" href="#primary_nav">Menu</a>
   	</header>
 	  <div id="contact-body-content" class="body-content">
