--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
   </head>
   <body id="projects-body">
     <header>
-  	    <h1 id="projects-body-header-logo" class="logo"><a href="index.html">Saptarshi Das</a></h1>
+  	    <h1 id="projects-body-header-logo" class="logo"><a href="http://www.egr.msu.edu/~dassapta">Saptarshi Das</a></h1>
   	    <a id="projects-body-header-to_nav" class="to_nav" href="#primary_nav">Menu</a>
   	</header>
 	  <div id="projects-body-content" class="body-content">
