Font scheme updates
Updating Font scheme to Raleway

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Saptarshi Das - MSU - Home Page">
     <meta name="keywords" content="Saptarshi Das, saptarshi msu, saptarshi das msu, homepage">
     <link rel="stylesheet" type="text/css" href="mystyle.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'> -->
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:400,500,700' rel='stylesheet' type='text/css'>
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -29,7 +30,7 @@
 	  </div>
 	  <nav id="primary_nav">
 	    <ul>
-	    	<li><a href="#home-body" class="current_page_link">Home</a></li>
+	      <li><a href="#home-body" class="current_page_link">Home</a></li>
 	      <li><a href="projects.html">Projects</a></li>
 	      <li><a href="resume.html">Resume</a></li>
 	      <li><a href="contact.html">Contact</a></li>
