--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Saptarshi Das - Resume">
     <meta name="keywords" content="Saptarshi Das, saptarshi msu, saptarshi das msu, resume">
     <link rel="stylesheet" type="text/css" href="mystyle.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'> -->
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:400,500,700' rel='stylesheet' type='text/css'>
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
