--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 	    </ul>
 	  </nav>
 	  <footer>
-	    Created by Saptarshi Das. 2015. Uncopyrighted.
+	    Created by Saptarshi Das. 2015.
 	  </footer>
   </body>
 </html>
