Updated Resume and Site

--- a/resume.html
+++ b/resume.html
@@ -21,15 +21,15 @@
   	</header>
 	  <div id="resume-body-content" class="body-content">
 		  <p>
-		    My latest resume can be downloaded using <a href="files/resume_sd_latest_v2.pdf">this link</a>.
+		    My latest resume can be downloaded using <a href="files/resume_sd_latest_v2.1.pdf">this link</a>.
 		  </p>
 		  <div id="resume-pdf-view">
 		    <p>
 		    You can also view the resume inside your browser below.
 		    </p>
-		    <object data="files/resume_sd_latest_v2.pdf" type="application/pdf" width="80%" height="100%" style="min-height:400px;display:block;margin-left:auto;margin-right:auto">
+		    <object data="files/resume_sd_latest_v2.1.pdf" type="application/pdf" width="80%" height="100%" style="min-height:400px;display:block;margin-left:auto;margin-right:auto">
 		      <p>It appears you don't have a PDF plugin for this browser.
-		      No problem, you can <a href="files/resume_sd_latest_v2.pdf">click here to download the PDF file.</a>
+		      No problem, you can <a href="files/resume_sd_latest_v2.1.pdf">click here to download the PDF file.</a>
 		      </p>
 		    </object>
 		  </div>
