Thesis Page Updates

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
             <ul>
               <li>Complete hardware / software system development for structured task data collection using electromagnetic interactions between device faces</li>
               <li>Real-time visualization (Python) of user actions and logging of action timing for analysis and inference</li>
-              <li>Inference of participant learning efficacy and cognitive flexibility using various games (Tower-Of-Hanoi etc.) and structured tasks (building clocks, puzzles etc.) recorded using developed hardware
+              <li>Inference of participant learning efficacy and cognitive flexibility using various games (Tower-Of-Hanoi etc.) and structured tasks (building blocks, puzzles etc.) recorded using developed hardware
             </ul>
             <br>
             <li><b>Wearable networked sensing system for cost-effective and privacy-friendly detection and measurement of meaningful social interactions in early childhood classrooms</b></li>
