--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <br>
             <h2>Recent News</h2>
             <p/>
-            <p>I am currently on the <b>job market</b> looking for <b>Internship</b> / <b>Full-time</b> positions (<b>Sr. Software Engineer</b> / <b>Research Scientist</b> / <b>Applied Systems Engineer</b> / <b>Machine Learning Engineer</b> / <b>Data Scientist</b>) starting <b>Summer 2019</b> (tentative graduation).</p>
+            <p>I am currently on the <b>job market</b> looking for <b>Full-time</b> positions (<b>Embedded Systems Engineer</b> / <b>Sr. Software Engineer</b> / <b>Research Scientist</b> / <b>Applied Scientist</b> / <b>Machine Learning Engineer</b> / <b>Sr. Data Scientist</b>) starting <b>November 2019</b> (planned graduation).</p>
             <p>Please take a look at my <a href="resume.html">resume</a> and feel free to <a href="contact.html">contact</a> me over <b>email</b>, <b>LinkedIn</b> etc. about any relevant opportunities.</p>
             <br>
             <h2>Background</h2>
