--- a/resume.html
+++ b/resume.html
@@ -26,6 +26,9 @@
         <p>
           My latest resume (two-page) can be downloaded using <a href="files/saptarshi_das_msu_resume_two_page.pdf">this link</a>.
         </p>
+        <p>
+          My long-form CV (four-page) with complete list of projects / publications can be downloaded <a href="files/saptarshi_das_msu_cv_long.pdf">here</a>.
+        </p>
         <div id="resume-pdf-view">
           <p>
             You can also view the resume inside your browser below (if an appropriate PDF plugin is available).
@@ -51,7 +54,7 @@
       </nav>
       <!-- #primary-nav -->
       <div id="resume-body-footer" class="body-footer">
-        Created by Saptarshi Das. 2018.
+        Created by Saptarshi Das. 2019.
       </div>
       <!-- #resume-body-footer -->
     </div>
