--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="home-body-header" class="body-header">
         <h1 id="home-body-header-logo" class="logo">
           <a href="index.html">Saptarshi Das</a>
-            <a id="home-body-header-to_nav" class="to_nav" href="#primary_nav"">Menu</a>
+            <a id="home-body-header-to_nav" class="to_nav" href="#primary_nav">Menu</a>
         </h1>
       </div>
       <!-- #home-body-header -->
@@ -36,7 +36,7 @@
             <br>
             <h2>Recent News</h2>
             <p/>
-            <p>I am currently on the <b>job market</b> looking for <b>Full-time</b> positions (<b>Embedded Systems Engineer</b> / <b>Sr. Software Engineer</b> / <b>Research Scientist</b> / <b>Applied Scientist</b> / <b>Machine Learning Engineer</b> / <b>Sr. Data Scientist</b>) starting <b>November 2019</b> (planned graduation).</p>
+            <p>I am currently on the <b>job market</b> looking for <b>Full-time</b> positions (<b>Embedded Systems Engineer</b> / <b>Sr. Software Engineer</b> / <b>Research Scientist</b> / <b>Applied Scientist</b> / <b>Machine Learning Engineer</b> / <b>Sr. Data Scientist</b>) starting <b>December 2019</b> (planned graduation).</p>
             <p>Please take a look at my <a href="resume.html">resume</a> and feel free to <a href="contact.html">contact</a> me over <b>email</b>, <b>LinkedIn</b> etc. about any relevant opportunities.</p>
             <br>
             <h2>Background</h2>
